--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/image": "2.0.0",
     "@nuxt/ui": "^4.3.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@vueuse/motion": "^3.0.3",
     "nuxt": "^4.2.2",
     "tailwindcss": "^4.1.18"
   },
