--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,10 @@ jobs:
         uses: actions/configure-pages@v4
 
       - name: Install dependencies
-        run: npm ci --include=optional
+        run: |
+          npm ci || (rm -rf node_modules package-lock.json && npm install)
+
+      - name: Generate static site
         run: npm run generate
 
       - name: Upload artifact
