--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
+    "lintfix": "eslint . --fix",
     "typecheck": "nuxt typecheck",
     "generate": "nuxt generate",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
