setup github pages deployment

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,8 @@
 shamefully-hoist=true
+legacy-peer-deps=false
+optional=true
+prefer-offline=false
+fetch-retries=5
+fetch-retry-factor=10
+fetch-retry-mintimeout=10000
+fetch-retry-maxtimeout=60000
